[package]
name = "al-kilo"
version = "0.1.0"
authors = ["fusillicode <fusillicode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.13.1"
futures = "0.3.5"

[dependencies.tokio]
version = "0.2.21"
features = ["macros"] # Needed for #[tokio::main]
